--- a/src/list/list.html.haml
+++ b/src/list/list.html.haml
@@ -1,4 +1,4 @@
 .ui.doubling.stackable.four.column.grid
-  .column(*ngFor="#character of characters")
+  .column(*ngFor="let character of characters")
     %fate-card([character]="character")
 
