--- a/src/sheet/sheet.component.haml
+++ b/src/sheet/sheet.component.haml
@@ -38,7 +38,7 @@
       .column
         %h2.ui.header Aspects
         .ui.list
-          .item(*ngFor="let aspect of character?.template.aspectSlots | map:namedAspect")
+          .item(*ngFor="let aspect of namedAspects()")
             .ui.grey.sub.header {{aspect.title}}
             %a.fate-aspect {{aspect.name || 'Missing'}}
         .ui.list
