--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -4,5 +4,5 @@
       Fate Character Sheet
 .fate-app-content
   %router-outlet
-%ngrx-devtools
+%ngrx-store-log-monitor(toggleCommand="ctrl-h" positionCommand="ctrl-m")
 
