--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -1,6 +1,6 @@
 .ui.borderless.fixed.top.menu
   .ui.very.padded.container
-    %a.header.item([routerLink]="['/Home']")
+    %a.header.item([routerLink]="['/']")
       Fate Character Sheet
 .fate-app-content
   %router-outlet
