--- a/src/card/card.component.haml
+++ b/src/card/card.component.haml
@@ -1,4 +1,4 @@
-%a(class="fate-card ui {{character?.color}} fluid card" [routerLink]="['/Character', {id: character?.id}]")
+%a(class="fate-card ui {{character?.color}} fluid card" [routerLink]="['/character', character?.id]")
   .image
     %img([src]="character?.portrait")
   .content
