Use new model structure and TS 1.7-style records.

--- a/src/card/card.component.haml
+++ b/src/card/card.component.haml
@@ -1,4 +1,4 @@
-%a(class="fate-card ui {{character?.color}} fluid card" [routerLink]="['/character', character?.id]")
+%a(class="fate-card ui {{character?.color}} fluid card" [routerLink]="['/character/1']")
   .image
     %img([src]="character?.portrait")
   .content
