Add the start of a FAB.

--- a/src/sheet/sheet.component.haml
+++ b/src/sheet/sheet.component.haml
@@ -65,4 +65,5 @@
           .item(*ngFor="let stunt of character?.stunts")
             .header {{stunt.name}}
             .description {{stunt.description}}
+%fate-fab
 
