Implement a FAB with static actions.

--- a/src/fab/fab.component.haml
+++ b/src/fab/fab.component.haml
@@ -1,5 +1,5 @@
 .fate-fab-extra-actions
-  %button.massive.circular.ui.icon.basic.red.button
+  %button.massive.circular.ui.icon.blue.button
     .fate-fab-icon
       %i.plus.icon/
 
