--- a/src/fab/fab.component.less
+++ b/src/fab/fab.component.less
@@ -1,5 +1,6 @@
 :host {
   position: fixed;
+  padding: 1em;
   right: 2em;
   bottom: 2em;
 }
@@ -19,6 +20,7 @@ button {
 }
 
 :host(.fate-fab-active) button {
+  position: relative;
   box-shadow: 0 0 0 1px #D4D4D5, 0 2px 4px 0 rgba(34,36,38,.15), 0 2px 10px 0 rgba(34,36,38,.25) !important;
 }
 
@@ -26,18 +28,58 @@ button {
   transform: rotate(360deg);
 }
 
-.fate-fab-extra-actions {
-  max-height: 0;
-  opacity: 0.0;
-  transition: max-height 1s linear, opacity 1s linear;
+.fate-fab-extra-actions button {
+  margin-bottom: 1ex;
+}
 
-  & > button {
-    margin-bottom: 1em;
-  }
+.fate-fab-extra-actions {
+  position: relative;
+  animation-duration: 0.5s;
+  animation-name: fade-out;
+  animation-fill-mode: both;
 }
 
 :host(.fate-fab-active) .fate-fab-extra-actions {
-  max-height: 500px;
-  opacity: 1.0;
+  animation-name: fade-in;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    top: 1ex;
+    max-height: 0;
+  }
+
+  1% {
+    opacity: 0;
+    top: 1ex;
+    max-height: 500px;
+  }
+
+  to {
+    opacity: 1;
+    top: 0;
+    max-height: 500px;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    top: 0;
+    max-height: 500px;
+  }
+
+  99% {
+    opacity: 0;
+    top: 1ex;
+    max-height: 500px;
+  }
+
+  to {
+    opacity: 0;
+    top: 1ex;
+    max-height: 0;
+  }
 }
 
