--- a/src/fab/fab.component.less
+++ b/src/fab/fab.component.less
@@ -3,6 +3,13 @@
   padding: 1em;
   right: 2em;
   bottom: 2em;
+  opacity: 1;
+
+  transition: opacity 0.5s ease;
+
+  &.fate-fab-preload {
+    opacity: 0;
+  }
 }
 
 .fate-fab-container {
