--- a/src/fab/fab.component.haml
+++ b/src/fab/fab.component.haml
@@ -1,12 +1,12 @@
 .fate-fab-extra-actions(*ngIf="showActions" (animationend)="checkActions()")
-  .fate-fab-container(*ngFor="let action of actions.toArray() | reversed" (click)="action.doClick($event)")
+  .fate-fab-container(*ngFor="let action of actions.toArray() | reversed" (click)="action.doAction($event)")
     .fate-fab-label(*ngIf="showLabels && action.label")
       %a.ui.right.pointing.label {{action.label}}
     %button.massive.circular.ui.icon.button(class="{{action.color}}")
       .fate-fab-icon
         %i.icon(class="{{action.icon}}")/
 
-.fate-fab-container((click)="doClick($event)")
+.fate-fab-container((click)="doAction($event)")
   .fate-fab-label.fate-fab-main-label(*ngIf="showLabels && label" (animationend)="checkLabel()")
     %a.ui.right.pointing.label {{label}}
   %button.massive.circular.ui.icon.button(class="{{currentColor}}")
