--- a/src/sheet/sheet.component.haml
+++ b/src/sheet/sheet.component.haml
@@ -3,9 +3,9 @@
     .ui.stackable.bottom.aligned.two.column.grid
       .sixteen.wide.column
         .ui.breadcrumb
-          %a.section Home
+          %a.section(routerLink="/") Home
           %i.right.angle.icon.divider/
-          %a.section Star Trek: Fate
+          %a.section(routerLink="/") Star Trek: Fate
           %i.right.angle.icon.divider/
       .column
         %h1.ui.header
