Prettify the sidebar.

--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -1,5 +1,4 @@
-.ui.inverted.basic.segment.left.sidebar((click)="onSidebarClick()")
-  %p Hello world
+.ui.inverted.vertical.menu.left.sidebar((click)="onSidebarClick()")
   %router-outlet(name="sidebar")/
 .ui.borderless.fixed.top.menu
   .ui.very.padded.container
