--- a/src/card-column/card-column.component.haml
+++ b/src/card-column/card-column.component.haml
@@ -1,9 +1,12 @@
-.ui.relaxed.link.inverted.items
-  %a.item(*ngFor="let character of characters")
-    .ui.mini.image
-      %img([src]="character.portrait")
-    .content
-      .header {{character.name}}
-      .meta
-        %span {{character.highConcept?.name}}
+.item
+  %a.ui.medium.inverted.header(routerLink="/group")
+    Star Trek: Fate
+  .menu
+    %a.item(*ngFor="let character of characters" routerLink="/character/1")
+      .fate-sidebar-container
+        %img.ui.tiny.image([src]="character.portrait")
+        .fate-sidebar-content
+          .ui.small.inverted.header
+            {{character.name}}
+            .sub.header {{character.highConcept?.name}}
 
