--- a/src/sheet/sheet.component.haml
+++ b/src/sheet/sheet.component.haml
@@ -103,9 +103,13 @@
         .eight.wide.column
           .ui.two.column.grid
             .column
-              %button.ui.basic.positive.fluid.button Apply
+              %button.ui.basic.positive.fluid.button
+                %i.ui.checkmark.icon
+                Apply
             .column
-              %button.ui.basic.negative.fluid.button Clear
+              %button.ui.basic.negative.fluid.button
+                %i.ui.remove.icon
+                Clear
 
 %fate-fab(color="red" icon="minus" inactiveIcon="user" label="Spend a Fate Point" (action)="spendPoint()")
   %fate-fab-action(color="blue" icon="plus" label="Add a Fate Point" (action)="addPoint()")/
