--- a/src/character/character-overlay.component.haml
+++ b/src/character/character-overlay.component.haml
@@ -17,11 +17,11 @@
       .eight.wide.column
         .ui.two.column.grid
           .column
-            %button.ui.basic.positive.fluid.button
+            %button.ui.inverted.green.fluid.button
               %i.ui.checkmark.icon
               Apply
           .column
-            %button.ui.basic.negative.fluid.button
+            %button.ui.inverted.red.fluid.button
               %i.ui.remove.icon
               Clear
 
