--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -8,7 +8,7 @@
 .pusher
   .fate-app-content
     %router-outlet/
-  %fate-overlay([open]="overlayOpen")
+  %fate-overlay([open]="overlayOpen | async")
 
 %ngrx-store-log-monitor(toggleCommand="ctrl-h" positionCommand="ctrl-m")/
 
