Specify in the character cache whether the character is loading or errored.

--- a/src/sheet/sheet.component.haml
+++ b/src/sheet/sheet.component.haml
@@ -1,4 +1,4 @@
-.ui.padded.piled.segment
+.ui.padded.piled.segment([class.loading]="loading")
   %div(*ngIf="character")
     .ui.stackable.bottom.aligned.two.column.grid
       .sixteen.wide.column
