--- a/src/ui/overlay.component.haml
+++ b/src/ui/overlay.component.haml
@@ -1,3 +1,3 @@
-.fate-overlay-container(@overlay="openState()")
+.fate-overlay-container([@overlay]="openState()")
   %router-outlet(name="overlay")/
 
