--- a/src/ui/stress-box.component.haml
+++ b/src/ui/stress-box.component.haml
@@ -1,3 +1,3 @@
-%a.ui.large.circular.label#fate-stress-box([@fill]="currentFill()" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)")
+%a#fate-stress-box([@fill]="currentFill()" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)")
   {{label}}
 
