Improve animation for stress boxes.

--- a/src/ui/stress-box.component.haml
+++ b/src/ui/stress-box.component.haml
@@ -1,3 +1,5 @@
-%a#fate-stress-box([@fill]="currentFill()" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)")
-  {{label}}
+#fate-stress-box((mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)")
+  #fate-stress-box-label {{label}}
+  #fate-stress-box-fill([@fill]="currentFill()")
+    #fate-stress-box-label {{label}}
 
