--- a/src/ui/stress-box.component.less
+++ b/src/ui/stress-box.component.less
@@ -1,14 +1,41 @@
 #fate-stress-box {
   display: flex;
-
-  align-items: center;
-  justify-content: center;
+  position: relative;
 
   height: 2.2em;
   width: 2.2em;
 
-  border-style: solid;
+  align-items: center;
+  justify-content: center;
+
+  border: none;
   border-radius: 50%;
-  border-width: 1px;
+  box-shadow: inset 0 0 0 1px rgba(218, 28, 28, 0.15);
+  cursor: pointer;
+  overflow: hidden;
+
+  &:hover {
+    box-shadow: inset 0 0 0 1px #D01919;
+    color: #DB2828;
+  }
+}
+
+#fate-stress-box-fill {
+  display: flex;
+  position: absolute;
+
+  align-items: center;
+  justify-content: center;
+
+  background: #DB2828;
+  border: none;
+  border-radius: 50%;
+  color: white;
+  overflow: hidden;
+
+  &:hover {
+    background: #D01919;
+    border-color: #DB2828;
+  }
 }
 
