--- a/src/ui/fab.component.less
+++ b/src/ui/fab.component.less
@@ -23,6 +23,14 @@
   }
 }
 
+.fate-fab-icon {
+  display: flex;
+  height: 1.25em;
+  width: 1.25em;
+  align-items: center;
+  justify-content: center;
+}
+
 .fate-fab-icon i {
   margin: 0;
 }
