--- a/src/character/character-page.component.haml
+++ b/src/character/character-page.component.haml
@@ -1,3 +1,3 @@
 .ui.very.padded.container
-  %fate-sheet([character]="character | async" [loading]="loading | async")
+  %fate-sheet([character]="character | async" [detail]="detail | async" [loading]="loading | async")
 
