Fix z-index issues

--- a/src/ui/sheet.component.haml
+++ b/src/ui/sheet.component.haml
@@ -1,88 +1,89 @@
-.ui.padded.piled.segment([class.loading]="loading")
-    %div(*ngIf="character")
-        .ui.stackable.bottom.aligned.two.column.grid
-            .sixteen.wide.column
-                .ui.breadcrumb
-                    %a.section(routerLink="/") Home
-                    %i.right.angle.icon.divider/
-                    %a.section(routerLink="/") Star Trek: Fate
-                    %i.right.angle.icon.divider/
-            .column
-                %h1.ui.header
-                    {{character?.name}}
-                    .sub.header
-                        Played by
-                        %a([routerLink]="['/Player', {id: character?.player.id}]")> {{character?.player?.name}}
-            .column
-                .ui.bottom.aligned.center.aligned.grid
-                    .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
-                        %a.ui.tiny.statistic
-                            .label Fate Points
-                            .value {{fatePoints}}
-                    .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
-                        %a.ui.tiny.statistic
-                            .label Refresh
-                            .value 2
-                    .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
-                        %a.ui.tiny.statistic
-                            .label Skill Cap
-                            .value +5
-                    .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
-                        %a.ui.tiny.statistic
-                            .label Skill Points
-                            .value 35
+.fate-sheet-wrapper
+    .ui.padded.piled.segment([class.loading]="loading")
+        %div(*ngIf="character")
+            .ui.stackable.bottom.aligned.two.column.grid
+                .sixteen.wide.column
+                    .ui.breadcrumb
+                        %a.section(routerLink="/") Home
+                        %i.right.angle.icon.divider/
+                        %a.section(routerLink="/") Star Trek: Fate
+                        %i.right.angle.icon.divider/
+                .column
+                    %h1.ui.header
+                        {{character?.name}}
+                        .sub.header
+                            Played by
+                            %a([routerLink]="['/Player', {id: character?.player.id}]")> {{character?.player?.name}}
+                .column
+                    .ui.bottom.aligned.center.aligned.grid
+                        .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
+                            %a.ui.tiny.statistic
+                                .label Fate Points
+                                .value {{fatePoints}}
+                        .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
+                            %a.ui.tiny.statistic
+                                .label Refresh
+                                .value 2
+                        .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
+                            %a.ui.tiny.statistic
+                                .label Skill Cap
+                                .value +5
+                        .eight.wide.mobile.four.wide.tablet.four.wide.computer.column
+                            %a.ui.tiny.statistic
+                                .label Skill Points
+                                .value 35
 
-        .ui.section.divider/
+            .ui.section.divider/
 
-        .ui.stackable.two.column.grid
-            .column
-                %h2.ui.header Aspects
-                .ui.list
-                    .item(*ngFor="let aspect of character?.aspects" (click)="toggleAspect(aspect)")
-                        .ui.grey.sub.header(*ngIf="aspect.label") {{aspect.label}}
-                        %a.fate-taggable([class.selected]="isAspectSelected(aspect)") {{aspect.name}}
-            .column
-                %h2.ui.header Skills
-                .ui.relaxed.divided.list
-                    .item(*ngFor="let entry of character?.skillsByRank.entrySeq() | sorted:0 | reversed")
-                        .fate-skill
-                            .left.floated.content
-                                .fate-skill-rank
-                                    .ui.small.header {{entry[0] | signed}}
-                            .content
-                                .ui.grey.sub.header.fate-skill-adjective
-                                    {{adjectiveLadder.get(entry[0])}}
-                                .ui.horizontal.list
-                                    .item(*ngFor="let skill of entry[1] | sorted:name")
-                                        %a.fate-taggable([class.selected]="isSkillSelected(skill)" (click)="toggleSkill(skill)") {{skill.name}}
-            .column
-                %h2.ui.header Stress
-                .ui.list
-                    .item(*ngFor="let track of character?.stressTracks | indexed; trackBy:getIndex")
-                        .ui.grey.sub.header {{track[1].name}}
-                        .ui.horizontal.list.fate-stress-track
-                            .item(*ngFor="let entry of track[1].boxes | indexed:1; trackBy:getIndex")
-                                %fate-stress-box([label]="entry[0]" [filled]="entry[1]" (click)="setStress($event, track[0], entry[0], !entry[1])")/
-                %h2.ui.header Consequences
-                .ui.relaxed.list
-                    .item(*ngFor="let consequence of character?.consequences")
-                        .fate-consequence
-                            .left.floated.content
-                                .ui.small.header {{consequence.rank | signed}}
-                            .content
-                                .ui.grey.sub.header {{consequence.label}}
-                                %a.fate-taggable(*ngIf="consequence.name")
-                                    {{consequence.name}}
-                                %span.fate-empty-consequence(*ngIf="!consequence.name")
-                                    Empty Slot
-            .column
-                %h2.ui.header Stunts
-                .ui.relaxed.list
-                    .item(*ngFor="let stunt of character?.stunts")
-                        %a.header
+            .ui.stackable.two.column.grid
+                .column
+                    %h2.ui.header Aspects
+                    .ui.list
+                        .item(*ngFor="let aspect of character?.aspects" (click)="toggleAspect(aspect)")
+                            .ui.grey.sub.header(*ngIf="aspect.label") {{aspect.label}}
+                            %a.fate-taggable([class.selected]="isAspectSelected(aspect)") {{aspect.name}}
+                .column
+                    %h2.ui.header Skills
+                    .ui.relaxed.divided.list
+                        .item(*ngFor="let entry of character?.skillsByRank.entrySeq() | sorted:0 | reversed")
+                            .fate-skill
+                                .left.floated.content
+                                    .fate-skill-rank
+                                        .ui.small.header {{entry[0] | signed}}
+                                .content
+                                    .ui.grey.sub.header.fate-skill-adjective
+                                        {{adjectiveLadder.get(entry[0])}}
+                                    .ui.horizontal.list
+                                        .item(*ngFor="let skill of entry[1] | sorted:name")
+                                            %a.fate-taggable([class.selected]="isSkillSelected(skill)" (click)="toggleSkill(skill)") {{skill.name}}
+                .column
+                    %h2.ui.header Stress
+                    .ui.list
+                        .item(*ngFor="let track of character?.stressTracks | indexed; trackBy:getIndex")
+                            .ui.grey.sub.header {{track[1].name}}
+                            .ui.horizontal.list.fate-stress-track
+                                .item(*ngFor="let entry of track[1].boxes | indexed:1; trackBy:getIndex")
+                                    %fate-stress-box([label]="entry[0]" [filled]="entry[1]" (click)="setStress($event, track[0], entry[0], !entry[1])")/
+                    %h2.ui.header Consequences
+                    .ui.relaxed.list
+                        .item(*ngFor="let consequence of character?.consequences")
+                            .fate-consequence
+                                .left.floated.content
+                                    .ui.small.header {{consequence.rank | signed}}
+                                .content
+                                    .ui.grey.sub.header {{consequence.label}}
+                                    %a.fate-taggable(*ngIf="consequence.name")
+                                        {{consequence.name}}
+                                    %span.fate-empty-consequence(*ngIf="!consequence.name")
+                                        Empty Slot
+                .column
+                    %h2.ui.header Stunts
+                    .ui.relaxed.list
+                        .item(*ngFor="let stunt of character?.stunts")
+                            %a.header
                             %span.fate-taggable {{stunt.name}}
-                        .description {{stunt.description}}
+                            .description {{stunt.description}}
 
-%fate-fab(color="red" icon="minus" inactiveIcon="user" label="Spend a Fate Point" (action)="spendPoint()")
-    %fate-fab-action(color="blue" icon="plus" label="Add a Fate Point" (action)="addPoint()")/
-    %fate-fab-action(color="yellow" icon="pencil" label="Edit {{character?.name}}")/
+    %fate-fab(color="red" icon="minus" inactiveIcon="user" label="Spend a Fate Point" (action)="spendPoint()")
+        %fate-fab-action(color="blue" icon="plus" label="Add a Fate Point" (action)="addPoint()")/
+        %fate-fab-action(color="yellow" icon="pencil" label="Edit {{character?.name}}")/
