--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -1,11 +1,12 @@
-.ui.inverted.vertical.menu.left.sidebar((click)="onSidebarClick()")
-    %router-outlet(name="sidebar")/
-.ui.borderless.fixed.top.menu
-    .ui.very.padded.container
-        %a.header.item((click)="onMenuClick()" [class.active]="sidebarOpen")
-            %i.sidebar.icon
-            Fate Character Sheet
-.pusher
-    .fate-app-content
-        %router-outlet/
-    %fate-overlay([open]="overlayOpen | async")
+%sui-sidebar-container
+    %sui-sidebar.inverted.vertical([isVisible]="sidebarOpen | async" transition="slide along")
+        %router-outlet(name="sidebar")/
+    %sui-sidebar-sibling([isDimmedWhenVisible]="true")
+        .ui.borderless.fixed.top.menu
+            .ui.very.padded.container
+                %a.header.item((click)="onMenuClick()" [class.active]="sidebarOpen | async")
+                    %i.sidebar.icon
+                    Fate Character Sheet
+        .fate-app-content
+            %router-outlet/
+        %fate-overlay([open]="overlayOpen | async")
