Fix top menu and sidebar

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,11 @@
+.fate-app-pusher {
+    height: 100%;
+}
+
 .fate-app-content {
+    height: 100%;
     padding-top: 60px;
     padding-bottom: 20px;
+    overflow-y: auto;
     background: white;
 }
