--- a/src/app/app.component.haml
+++ b/src/app/app.component.haml
@@ -1,12 +1,13 @@
+.ui.borderless.top.fixed.menu
+    .ui.very.padded.container
+        %a.header.item((click)="onMenuClick()" [class.active]="sidebarOpen | async")
+            %i.sidebar.icon
+            Fate Character Sheet
+
 %sui-sidebar-container
     %sui-sidebar.inverted.vertical([isVisible]="sidebarOpen | async" transition="slide along")
         %router-outlet(name="sidebar")/
-    %sui-sidebar-sibling([isDimmedWhenVisible]="true")
-        .ui.borderless.fixed.top.menu
-            .ui.very.padded.container
-                %a.header.item((click)="onMenuClick()" [class.active]="sidebarOpen | async")
-                    %i.sidebar.icon
-                    Fate Character Sheet
+
+    %sui-sidebar-sibling.fate-app-pusher([isDimmedWhenVisible]="true")
         .fate-app-content
             %router-outlet/
-        %fate-overlay([open]="overlayOpen | async")
